[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/twitter_logo.svg" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/SocialMediaButton.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1.15, 0.84, 0.3, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.05, 0.84, 0.3, 1 ), Color( 1.15, 1.15, 1, 1 ) ]
}

[node name="SocialMediaButton" type="TextureButton"]
modulate = Color( 1.15, 0.84, 0.3, 1 )
margin_right = 74.0
margin_bottom = 61.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/hover = SubResource( 2 )

[connection signal="focus_entered" from="." to="." method="_on_SocialMediaButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SocialMediaButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_SocialMediaButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SocialMediaButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SocialMediaButton_pressed"]
